# cti-engine

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  start.sh
data/: example.json  stop_words.txt
data/additional_data/: threat_actors_fbk.csv
infrastructure_files/: custom.yaml
infrastructure_files/terraform/aws/: main.tf
infrastructure_files/terraform/docker/: .terraform.lock.hcl  main.tf  state.json  terraform.tfstate  terraform.tfstate.backup
src/: error.rs  lib.rs  main.rs  tests.rs
src/cli/: mod.rs
src/db/: mod.rs
src/db/models/: group.rs  malware.rs  mod.rs  tactic.rs  technique.rs
src/db/mongo/: mod.rs
src/db/mongo/query/: cve.rs  group.rs  malware.rs  mod.rs  tactic.rs  techniques.rs
src/labels/: mod.rs  nlp.rs
src/parser/: analyze.rs  mod.rs
src/parser/custom/: mod.rs
src/parser/terraform/: mod.rs
src/routes/: cves.rs  groups.rs  malware.rs  mod.rs  tactics.rs  techniques.rs  utils.rs
src/routes/file/: custom.rs  mod.rs  terraform.rs
